Apartado pre-errores completo

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -2,3 +2,6 @@ spring.application.name=AlumnoCRUD
 
 api.version = ${API_VERSION:v1}
 server.port = ${PORT:3000}
+
+# Para los mensajes en las excepciones
+server.error.include-message=always
