--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -5,3 +5,6 @@ server.port = ${PORT:3000}
 
 # Para los mensajes en las excepciones
 server.error.include-message=always
+
+# Para activar los mensajes nivel DEBUG en las clases es.nicolas.alumnocrud, por ejemplo
+logging.level.es.nicolas.alumnocrud=DEBUG
