--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -8,3 +8,47 @@ server.error.include-message=always
 
 # Para activar los mensajes nivel DEBUG en las clases es.nicolas.alumnocrud, por ejemplo
 logging.level.es.nicolas.alumnocrud=DEBUG
+
+
+## Base de datos de desarrollo H2 en memoria
+# Podemos elegir en fichero embebido o en memoria.
+## La url para ingresar
+spring.datasource.url=jdbc:h2:mem:alumnoapirest
+## Usuario y contraseña (system-administrator)
+spring.datasource.username=sa
+#spring.datasource.password=
+
+# Habilitamos la consola web de H2 en /h2-console
+# En nuesto caso http://localhost:3000/h2-console
+spring.h2.console.enabled=true
+
+# Habilitamos los mensajes SQL en el log para ver consultas
+# JPA es el estandard de Java para acceso a bases de datos relacionales
+# Hibernate es una implementación de JPA
+spring.jpa.show-sql=true
+
+# Habilitamos que cargue los datos
+# estos datos los carga el archivo data.sql en resources
+spring.jpa.defer-datasource-initialization=true
+
+# Habilitamos la creacion de la base de datos en cada arranque,
+# y eliminación al parar, util para modo desarrollo.
+spring.jpa.hibernate.ddl-auto=create-drop
+
+# Habilitamos la carga de datos en cada arranque
+spring.sql.init.mode=always
+
+# Habilitamos el dialecto de H2
+spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
+
+# Activamos el nivel trace para las sentencias SQL completas (mas detallado)
+logging.level.org.hibernate.orm.jdbc.bind=TRACE
+
+
+
+
+
+
+
+
+
