--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,8 +6,8 @@ server.port = ${PORT:3000}
 # Para los mensajes en las excepciones
 server.error.include-message=always
 
-# Para activar los mensajes nivel DEBUG en las clases es.nicolas.alumnocrud, por ejemplo
-logging.level.es.nicolas.alumnocrud=DEBUG
+# Para activar los mensajes nivel DEBUG en las clases es.nicolas.alumnos, por ejemplo
+logging.level.es.nicolas.alumnos=DEBUG
 
 
 ## Base de datos de desarrollo H2 en memoria
