Creación de clases (3)- WebSocket.

--- a/pom.xml
+++ b/pom.xml
@@ -46,6 +46,10 @@
         <!-- Dependencia de la base de datos; rapida y ligera(ya viene integrada)
             El "scope" se refiere a que es en ese entorno -->
         <dependency>
+            <groupId>org.springframework.boot</groupId>
+            <artifactId>spring-boot-starter-websocket</artifactId>
+        </dependency>
+        <dependency>
             <groupId>com.h2database</groupId>
             <artifactId>h2</artifactId>
             <scope>runtime</scope>
