seguridad: nuevas entidades, configuraciones y accesibilidad.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -45,7 +45,12 @@ spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 
+## JWT
+# Configuracion de secreto y tiempo de token en segundos (86400 = 24 horas)
+jwt.secret= ContraseñaSegura
 
+# Expiration in seconds
+jwt.expiration=99999
 
 
 
