Mejoras en la legibilidad del SQL y peticiones HTTP.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -38,6 +38,9 @@ spring.jpa.hibernate.ddl-auto=create-drop
 # Habilitamos la carga de datos en cada arranque
 spring.sql.init.mode=always
 
+# Formatea la salida SQL para que se lea mejor en la consola
+spring.jpa.properties.hibernate.format_sql=true
+
 # Habilitamos el dialecto de H2
 spring.jpa.database-platform=org.hibernate.dialect.H2Dialect
 
