Añadir documentación OpenAPI a los endpoints de alumnos.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -53,7 +53,12 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 jwt.secret= ContraseñaSegura
 
 # Expiration in seconds
-jwt.expiration=99999
+jwt.expiration=9999
+
+
+## SWAGGER
+# Habilitamos Swagger, quitar en produccion porque expone toda la API
+springdoc.swagger-ui.enabled=true
 
 
 
