--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,8 @@
 spring.application.name=AlumnoCRUD
 
+application.title=${APPLICATION_TITLE:Alumnos API Rest Spring Boot} API REST
+application.version=${APPLICATION_VERSION:1.0.0}
+
 api.version = ${API_VERSION:v1}
 server.port = ${PORT:3000}
 
