GraphQL 1: añadir configuración, dependencias y esquema para consultas de alumnos y asignaturas.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -64,7 +64,11 @@ jwt.expiration=9999
 springdoc.swagger-ui.enabled=true
 
 
-
-
-
+## GRAPHQL
+# Habilitamos GraphQL
+spring.graphql.graphiql.enabled=true
+# Path para acceder a GraphiQL UI
+spring.graphql.graphiql.path=/graphiql
+# Configuramos el endpoint de GraphQL
+spring.graphql.http.path=/graphql
 
