Añadir configuración de Pebble y DevTools, implementar GlobalControllerAdvice y crear ZonaPublicaController

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -72,3 +72,13 @@ spring.graphql.graphiql.path=/graphiql
 # Configuramos el endpoint de GraphQL
 spring.graphql.http.path=/graphql
 
+## PEBBLE TEMPLATE ENGINE
+pebble.suffix=.peb.html
+pebble.cache=false
+pebble.charset=UTF-8
+
+## Configuracion DevTools
+spring.devtools.restart.enabled=true
+spring.devtools.restart.exclude=static/**,public/**
+spring.devtools.livereload.enabled=true
+
