Añadir soporte para i18n y barra de navegación.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -82,3 +82,7 @@ spring.devtools.restart.enabled=true
 spring.devtools.restart.exclude=static/**,public/**
 spring.devtools.livereload.enabled=true
 
+## Configuracion de i18n (mensajes internacionales)
+# Si queremos cambiar el nombre del fichero por defecto (messages.properties) hay que usar esta propiedad
+spring.messages.basename=mensajes
+spring.messages.encoding=UTF-8
