Añadir funcionalidades de autenticación y gestión de errores.

--- a/src/main/resources/mensajes.properties
+++ b/src/main/resources/mensajes.properties
@@ -1,4 +1,12 @@
 alumnos.search=Buscar
+auth.email=Email
+auth.forgot.password=¿Olvidaste tu contraseña?
+auth.login=Iniciar Sesión
+auth.logout=Cerrar Sesión
+auth.password=Contraseña
+auth.register=Registrarse
+auth.remember=Recordarme
+error.404=Recurso no encontrado
 label.alumno.apellido=Apellido
 label.alumno.asignatura=Asignatura
 label.alumno.empty=No se han encontrado alumnos
