Añadir vistas de perfil(editar,etc.), y cambios generales.

--- a/src/main/resources/mensajes.properties
+++ b/src/main/resources/mensajes.properties
@@ -6,6 +6,7 @@ auth.logout=Cerrar Sesión
 auth.password=Contraseña
 auth.register=Registrarse
 auth.remember=Recordarme
+auth.username=Usuario
 error.404=Recurso no encontrado
 label.alumno.apellido=Apellido
 label.alumno.asignatura=Asignatura
