--- a/.editorconfig
+++ b/.editorconfig
@@ -8,10 +8,9 @@ insert_final_newline = true
 indent_style = space
 
 [*.{java,xml}]
-indent_size = 4
+indent_size = 2
 trim_trailing_whitespace = true
-indent_style = tab
-tab_width = 4
+indent_style = space
 
 [{pom,wro}.xml]
 indent_size = 2
