Corregir datos de ejemplo en SQL.

--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -17,7 +17,7 @@ logging.level.es.nicolas.alumnos=DEBUG
 # Podemos elegir en fichero embebido o en memoria.
 ## La url para ingresar
 spring.datasource.url=jdbc:h2:mem:alumnoapirest
-## Usuario y contraseña (system-administrator)
+## Usuario y contraseï¿½a (system-administrator)
 spring.datasource.username=sa
 #spring.datasource.password=
 
@@ -27,7 +27,7 @@ spring.h2.console.enabled=true
 
 # Habilitamos los mensajes SQL en el log para ver consultas
 # JPA es el estandard de Java para acceso a bases de datos relacionales
-# Hibernate es una implementación de JPA
+# Hibernate es una implementaciï¿½n de JPA
 spring.jpa.show-sql=true
 
 # Habilitamos que cargue los datos
@@ -35,7 +35,7 @@ spring.jpa.show-sql=true
 spring.jpa.defer-datasource-initialization=true
 
 # Habilitamos la creacion de la base de datos en cada arranque,
-# y eliminación al parar, util para modo desarrollo.
+# y eliminaciï¿½n al parar, util para modo desarrollo.
 spring.jpa.hibernate.ddl-auto=create-drop
 
 # Habilitamos la carga de datos en cada arranque
@@ -53,7 +53,7 @@ logging.level.org.hibernate.orm.jdbc.bind=TRACE
 
 ## JWT
 # Configuracion de secreto y tiempo de token en segundos (86400 = 24 horas)
-jwt.secret= ContraseñaSegura
+jwt.secret= ContraseÃ±aSegura
 
 # Expiration in seconds
 jwt.expiration=9999
