Añadir confirmación para el borrado de alumnos y mensajes de error en inglés y español.

--- a/src/main/resources/mensajes.properties
+++ b/src/main/resources/mensajes.properties
@@ -1,3 +1,5 @@
+alumnos.borrar.mensaje=¿Confirma el borrado del alumno {0}?
+alumnos.borrar.titulo=Borrar alumno
 alumnos.search=Buscar
 auth.email=Email
 auth.forgot.password=¿Olvidaste tu contraseña?
@@ -7,7 +9,10 @@ auth.password=Contraseña
 auth.register=Registrarse
 auth.remember=Recordarme
 auth.username=Usuario
-error.404=Recurso no encontrado
+error.403=Acceso denegado
+error.404=Página no encontrada
+error.500=Error interno del servidor
+error.general=Ha ocurrido un error
 label.alumno.apellido=Apellido
 label.alumno.asignatura=Asignatura
 label.alumno.empty=No se han encontrado alumnos
